--- a/Neat Burguer/Views/Shared/LayoutAdmi.cshtml
+++ b/Neat Burguer/Views/Shared/LayoutAdmi.cshtml
@@ -1,14 +1,13 @@
-﻿﻿<html>
+﻿<html>
 <head>
-    <link lang="es" />
-    <link href="~/estilos.css" rel="stylesheet" />
+    <link href="~/estilos.css" rel="stylesheet">
     <title>Administrador Neat Burguer</title>
 </head>
 <body>
     <header>
         <nav>
-            <a asp-area="admin" asp-controller="home" asp-action="index">Principal</a>
-            <a asp-area="admin" asp-controller="home" asp-action="menu">Modificar menú</a>
+            <a href="~/Admin">Principal</a>
+            <a href="~/Admin/Menu">Modificar menú</a>
         </nav>
     </header>
     <main>
