--- a/Neat Burguer/Views/Shared/_Layout.cshtml
+++ b/Neat Burguer/Views/Shared/_Layout.cshtml
@@ -1,15 +1,15 @@
-﻿﻿<html>
+﻿<html>
 <head>
-    <link lang="es-mx" />
     <link href="~/estilos.css" rel="stylesheet" />
     <title>Neat Burguer</title>
 </head>
+
 <body>
     <header>
         <nav>
-            <a asp-controller="home" asp-action="index">Principal</a>
-            <a asp-controller="home" asp-action="promociones">Promociones</a>
-            <a asp-controller="home" asp-action="menu">Menú</a>
+            <a href="~/">Principal</a>
+            <a href="~/Home/Promociones/0">Promociones</a>
+            <a href="~/Home/Menu">Menú</a>
         </nav>
     </header>
     <main>
