--- a/Neat Burguer/Views/Home/Menu.cshtml
+++ b/Neat Burguer/Views/Home/Menu.cshtml
@@ -1,27 +1,39 @@
 ﻿@model Neat_Burguer.Models.ViewModels.MenuViewModel
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     Layout = "_Layout";
 }
 <section class="menu3">
     <div>
         <h1>NUESTRO MENÚ</h1>
-        @foreach (var clasificacion in Model.Clasificaciones)
+        @foreach (var m in Model.ListaClasificacion)
         {
-            <h3>@clasificacion.Nombre</h3>
-            @foreach (var hamburguesa in clasificacion.Hamburguesas)
+            <h3>@m.Nombre</h3>
+            @foreach (var h in m.ListaMenu)
             {
-                <h2 @(hamburguesa.Seleccionado == true ? "class=seleccionado" : string.Empty)>
-                    <a href="~/menu/@(hamburguesa.Nombre.ToLower().Replace(" ", "-"))">
-                        <span>@hamburguesa.Nombre</span>
-                        <span class="price">@hamburguesa.Precio.ToString("c")</span>
-                    </a>
-                </h2>
+                if (h.Seleccionado)
+                {
+                    <h2 class="seleccionado">
+                        <a href="~/Home/Menu/@h.Nombre.Replace(' ','-')">
+                            <span>@h.Nombre</span> <span class="price">@h.Precio.ToString("c")</span>
+                        </a>
+                    </h2>
+                }
+                else
+                {
+                    <h2>
+                        <a href="~/Home/Menu/@h.Nombre.Replace(' ','-')">
+                            <span>@h.Nombre</span> <span class="price">@h.Precio.ToString("c")</span>
+                        </a>
+                    </h2>
+                }
             }
         }
     </div>
-    <div>
-        <img src="~/hamburguesas/@(Model.Id).png" asp-append-version />
-        <p> </p>
-    </div>
-</section>
+    @if (Model.Hamburguesa != null)
+    {
+        <div>
+            <img src="~/hamburguesas/@(Model.Hamburguesa.Id).png" />
+            <p>@Model.Hamburguesa.Descripción</p>
+        </div>
+    }
+</section> 
